# loan_api

./: Makefile  README.md  pyproject.toml
api_loans/: admin.py  apps.py  models.py  tests.py  views.py
api_loans/api/: serializers.py  viewsets.py
api_loans/migrations/: 0001_initial.py  0002_alter_emprestimo_cliente.py  0003_pagamento_cliente.py  0004_rename_create_at_pagamento_created_at.py  0005_alter_emprestimo_taxa_de_juros.py  0006_emprestimo_valor_devido.py
loans/: asgi.py  settings.py  urls.py  wsgi.py
loans/api_loans/: models.py
loans/api_loans/api/: __init__.py  serializers.py  viewsets.py
